--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,30 @@
+---
+import "../styles/global.css";
+import Navbar from "../components/Navbar.astro";
+const { 
+	descirption = "Zepto Sign Customizer is a tool for creating custom signatures using Zepto's design system.",
+	image = "/images/thumbnail.png",
+	title = "Zepto Sign Customizer"
+} = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="description" content={descirption} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta property="og:image" content={image} />
+		<title>{title}</title>
 	</head>
 	<body>
+		<Navbar />
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+
 </style>
