--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@ body::before {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url("./assets/background.svg");
+  background-color: var(--color-background);
+  /* background-image: url("./assets/background.svg"); */
+  background-image: url("./assets/bg3.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
