--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body::before {
   height: 100vh;
   background-color: var(--color-background);
   /* background-image: url("./assets/background.svg"); */
+  /* background-image: url("./assets/bg.webp"); */
   background-image: url("./assets/bg3.jpg");
   background-size: cover;
   background-position: center;
