--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   --font-hero: "Parkinsans", sans-serif;
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
