--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
   --color-primary: #908fff;
-  --color-secondary: #c3c2fe;
+  --color-secondary: #c8c8ff;
   --color-accent: #9d9bed;
   --color-background: #fff;
   --color-text: #333333;
