--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,11 @@ body::before {
   z-index: -1;
   pointer-events: none;
 }
+
+.neon-text {
+  filter: drop-shadow(0 0 5px --color-primary)
+    drop-shadow(0 0 10px --color-secondary) drop-shadow(0 0 20px #00ffff);
+  font-size: 3rem;
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 2px;
+}
