--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --color-primary: #908fff;
   --color-secondary: #c8c8ff;
   --color-accent: #9d9bed;
+  --color-accent_2: #9d9bed;
+  --color-accent_3: #9d9bed;
   --color-background: #fff;
   --color-text: #333333;
   --font-hero: "Parkinsans", sans-serif;
