--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
   scroll-behavior: smooth;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
