--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,19 @@ body::before {
   font-family: "Orbitron", sans-serif;
   letter-spacing: 2px;
 }
+
+
+.parallax-effect {
+  transform-style: preserve-3d;
+
+  .inner-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+    font-style: italic;
+    color: white;
+    transform: translateZ(60px);
+  }
+}
