--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,7 @@ body::before {
 }
 
 .neon-text {
-  filter: drop-shadow(0 0 5px --color-primary)
-    drop-shadow(0 0 10px --color-secondary) drop-shadow(0 0 20px #00ffff);
+  filter: drop-shadow(0 0 5px --color-primary) drop-shadow(0 0 10px --color-secondary) drop-shadow(0 0 20px #00ffff);
   font-size: 3rem;
   font-family: "Orbitron", sans-serif;
   letter-spacing: 2px;
@@ -28,9 +27,9 @@ body::before {
 .parallax-effect {
   transform-style: preserve-3d;
   transition: all 0.125s ease-in-out;
+
   :hover {
-    filter: drop-shadow(0 0 5px var(--color-primary))
-    drop-shadow(0 0 10px var(--color-secondary)) drop-shadow(0 0 20px #00ffff);
+    filter: drop-shadow(0 0 5px var(--color-primary)) drop-shadow(0 0 10px var(--color-secondary)) drop-shadow(0 0 20px #00ffff);
   }
 
   .inner-element {
