--- a/src/index.css
+++ b/src/index.css
@@ -160,12 +160,15 @@ button {
 @keyframes floatSlow {
   0% {
     transform: translateY(0px);
+    transform: translateX(0px);
   }
   50% {
-    transform: translateY(-15px);
+    transform: translateY(-20px);
+    transform: translateX(-10px);
   }
   100% {
     transform: translateY(0px);
+    transform: translateX(0px);
   }
 }
 
@@ -193,7 +196,7 @@ button {
 }
 
 .float-slow {
-  animation: floatSlow 4s ease-in-out infinite;
+  animation: floatSlow 2s ease-in-out infinite;
 }
 
 .float-fast {
