--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,11 @@ body::before {
     transform: translateZ(60px);
   }
 }
+
+footer {
+  background: url("./assets/footer-image-zepto.jpg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #010103;
+}
