updated: footer image modified, hero demo button link added

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body::before {
 }
 
 footer {
-  background: url("/assets/footer-image-zepto_2.jpg");
+  background: url("/assets/footer-image-zepto_2.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
